Add a way to remove a logo from a form
