# app/models/form.rb
@@ -40,6 +40,8 @@ class Form < ApplicationRecord
 
   mount_uploader :logo, LogoUploader
 
+  enum :header_logo_display, { banner: 'banner', square: 'square', no_logo: 'no_logo' }, default: 'banner', prefix: true
+
   def self.my_forms(user, aasm_state)
     if user.organizational_form_approver?
       items = user.organization.forms
@@ -323,16 +325,18 @@ class Form < ApplicationRecord
           instructions: instructions,
           disclaimer_text: disclaimer_text,
           logo_url: if logo.present?
-                      if display_header_logo
+                      case header_logo_display
+                      when 'banner'
                         logo.tag.url
-                      elsif display_header_square_logo
+                      when 'square'
                         logo.logo_square.url
                       end
                     end,
           logo_class: if logo.present?
-                        if display_header_logo
+                        case header_logo_display
+                        when 'banner'
                           'form-header-logo'
-                        elsif display_header_square_logo
+                        when 'square'
                           'form-header-logo-square'
                         end
                       end,
