# app/serializers/form_serializer.rb
@@ -22,11 +22,10 @@ class FormSerializer < ActiveModel::Serializer
              :whitelist_url_8,
              :whitelist_url_9,
              :whitelist_test_url,
-             :display_header_logo,
+             :header_logo_display,
              :success_text_heading,
              :success_text,
              :modal_button_text,
-             :display_header_square_logo,
              :early_submission,
              :user_id,
              :template,
